<resources>
    <string name="app_name" translatable="false">Merge?</string>
    <string name="info">Info</string>
    <string name="review">Review</string>
    <string name="main_bottom_tab1">Search</string>
    <string name="title_merge" translatable="false">Merge?</string>
    <string name="hint_id">ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="button_about_us" translatable="false">About Us</string>
    <string name="button_sign_up">Create Account</string>
    <string name="button_sign_in">Sign In</string>
    <string name="welcome_to_merge">Create Account</string>
    <string name="username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_language">Language</string>
    <string name="remember_info">Remember Info</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="product_info_title">Product</string>
    <string name="tab_product_info">Info</string>
    <string name="tab_product_review">Reviews</string>
    <string name="description_new_review">New Review</string>
    <string name="label_no_reviews">Reviews not exist</string>

    <!-- Strings in Main Activity -->
    <string name="button_settings">Settings</string>
    <string name="button_search">Search</string>
    <string name="button_search_by_camera">Scan</string>
    <string name="main_title" translatable="false">Merge?</string>
    <string name="hint_search">Search Product</string>
    <string name="main_sub_title1">Recent Reviews</string>

    <!-- Strings in Review Activity -->
    <string name="review_title">Title</string>
    <string name="review_content">Content</string>
    <string name="write_review_title">Write Review</string>

    <!-- Strings in Camera Activity -->
    <string name="text_select_category">Select Category</string>

    <string name="text_category1">Ramen</string>
    <string name="text_category2">Snack</string>
    <string name="text_category3">Drink</string>
    <string name="text_category4">Dairy</string>
    <string name="text_category5">Ice Cream</string>
    <string name="text_category6">Category6</string>


    <string name="button_result_title">Product Detected</string>
    <string name="button_redetect">Scan Again</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_start_detection">Start Scanning</string>
    <string name="button_search_by_keyword">Search</string>
    <string name="description_back_button">Back Button</string>


    <!-- Strings in Search Activity -->
    <string name="text_loading">Loading…</string>
    <string name="button_cancel">Cancel</string>
    <string name="description_product_image">Product Image</string>

    <string name="info1">Category</string>
    <string name="info2">Serving Size</string>
    <string name="info3">Calories</string>
    <string name="info4">Total Carbohydrate</string>
    <string name="info5">Dietary Fiber</string>
    <string name="info6">Sugars</string>
    <string name="info7">Protein</string>
    <string name="info8">Total Fat</string>
    <string name="info9">Saturated Fat</string>
    <string name="info10">Trans Fat</string>
    <string name="info11">Cholesterol</string>
    <string name="info12">Sodium</string>
    <string name="info13">Calcium</string>
    <string name="info14">Iron</string>
</resources>