<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.merge.camera.CameraViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/text_select_category"
                android:textColor="@color/dark_gray_1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="224dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/category1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_button1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/text_category1"
                    android:textAllCaps="false"
                    android:textColor="@color/state_checked1"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/category2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_button1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/text_category2"
                    android:textAllCaps="false"
                    android:textColor="@color/state_checked1"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/category3"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_button1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/text_category3"
                    android:textAllCaps="false"
                    android:textColor="@color/state_checked1"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/category4"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_button1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/text_category4"
                    android:textAllCaps="false"
                    android:textColor="@color/state_checked1"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/category5"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_button1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/text_category5"
                    android:textAllCaps="false"
                    android:textColor="@color/state_checked1"
                    android:textSize="14sp" />

            </RadioGroup>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>