<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.merge.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:minWidth="48dip"
                android:minHeight="48dip"
                android:tint="@color/state_pressed1"
                app:srcCompat="@drawable/ic_arrow_back_24"
                android:onClick="@{() -> vm.goBack()}"
                android:contentDescription="@string/description_back_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/welcome_to_merge"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/dark_gray_1"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- Name -->
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/hint_username"
                android:textColor="@color/dark_gray_1"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edittext_signup_username"
                android:layout_width="224dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/square_edittext1"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:text="@={vm.nameField}"
                android:textColor="@color/dark_gray_1" />

            <!-- Email -->
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/hint_email"
                android:textColor="@color/dark_gray_1"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edittext_signup_email"
                android:layout_width="224dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/square_edittext1"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@={vm.emailField}"
                android:textColor="@color/dark_gray_1"
                android:textSize="16sp" />

            <!-- Password -->
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/hint_password"
                android:textColor="@color/dark_gray_1"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edittext_signup_pwd"
                android:layout_width="224dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="26dp"
                android:background="@drawable/square_edittext1"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={vm.passwordField}"
                android:textColor="@color/dark_gray_1"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/round_button2"
                android:gravity="center"
                android:onClick="@{() -> vm.signUp()}"
                android:text="@string/button_sign_up"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>