<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.merge.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/main_title"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_gray_1"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageButton
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:onClick="@{() -> vm.showSettings()}"
                    android:src="@drawable/ic_baseline_settings_32"
                    android:text="@string/button_settings"
                    android:textAllCaps="false"
                    android:textColor="@color/state_pressed1"
                    android:tint="@color/state_pressed1" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/main_sub_title1"
                android:textColor="@color/dark_gray_1"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Products -->
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productsRecycler"
            productsList="@{vm.recentlyReviewedProducts}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            tools:listitem="@layout/product_list_item">

        </androidx.recyclerview.widget.RecyclerView>

        <!-- Buttons -->
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/gray_5"
            app:layout_constraintBottom_toBottomOf="@+id/productsRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Search by keyword -->

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button2"
                android:drawableEnd="@drawable/ic_baseline_camera_24"
                android:gravity="center"
                android:onClick="@{() -> vm.startCamera()}"
                android:paddingHorizontal="24dp"
                android:text="@string/button_search_by_camera"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button2"
                android:drawableEnd="@drawable/ic_baseline_search_24_white"
                android:gravity="center"
                android:onClick="@{() -> vm.startSearch()}"
                android:paddingHorizontal="24dp"
                android:text="@string/button_search_by_keyword"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <!-- Divider -->

            <!-- Search by camera -->

        </LinearLayout>

        <!-- Footer -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>