<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.example.merge.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/mp_searchfield"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autofillHints="@null"
                android:background="@drawable/round_edittext1"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:text="@={vm.keywordField}"
                android:textColor="@color/dark_gray_1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/description_back_button"
                android:fontFamily="sans-serif-light"
                android:minWidth="48dip"
                android:minHeight="48dip"
                android:onClick="@{() -> vm.goBack()}"
                android:paddingHorizontal="10dp"
                android:text="@string/button_cancel"
                android:textAllCaps="false"
                android:textColor="@color/state_pressed1"
                android:tint="@color/state_pressed1" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:indeterminate="true"
            android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/resultsRecycler"
            productsList="@{vm.searchResults}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            tools:listitem="@layout/product_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>